# template-python

./: .flake8  LICENSE  README.md  pyproject.toml
.github/: ci.ylm
.github/workflows/: ci.yml
src/template/: rectangle.py
tests/: test_rectangle.py
